test/scc/pp/errors/042.t
#define A
#ifndef A
1